# semver

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
example/: CMakeLists.txt  basic_example.cpp  example.cpp  range_example.cpp
include/: semver.hpp
src/: semver.hpp
test/: CMakeLists.txt  test.cpp  test_constructors.cpp  test_dataset.hpp  test_from_to_string.cpp  test_operators.cpp  test_parse.cpp  test_ranges.cpp  test_to_string.cpp  test_utils.hpp  test_validation.cpp
